Background image position fix and text align

--- a/index.css
+++ b/index.css
@@ -1333,21 +1333,27 @@
 
 @media (max-width: 575px) {
   .u-section-8 .u-sheet-1 {
-    min-height: 1345px;
+    min-height: 1485px;
   }
 
   .u-section-8 .u-text-1 {
+    margin-top: 70px;
     margin-right: auto;
     margin-left: 74px;
   }
 
   .u-section-8 .u-list-1 {
-    width: 287px;
-    margin-right: 19px;
+    width: 330px;
+    margin-top: 16px;
+    margin-right: -24px;
   }
 
   .u-section-8 .u-repeater-1 {
     min-height: 292px;
+  }
+
+  .u-section-8 .u-text-6 {
+    margin-top: 74px;
   }
 
   .u-section-8 .u-text-7 {
@@ -1360,13 +1366,20 @@
   }
 
   .u-section-8 .u-text-9 {
+    margin-top: 0;
     margin-right: auto;
     margin-left: 34px;
   }
 
+  .u-section-8 .u-text-10 {
+    margin-top: 34px;
+    margin-right: 96px;
+  }
+
   .u-section-8 .u-text-11 {
-    margin-left: 34px;
     margin-right: 34px;
+    margin-bottom: 34px;
+    margin-left: 38px;
   }
 } .u-section-9 {
   background-image: none;
